[tool.poetry]
name = "causal-tree-learn"
version = "2.42"
description = ""
authors = ["Christopher Tran <ctran29@uic.edu>"]
license = "License :: OSI Approved :: MIT License"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"
scipy = "^1.10.0"
Cython = "^0.29.32"
twine = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
